--- a/style.css
+++ b/style.css
@@ -1,17 +1,65 @@
 /* ROOT */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", serif;
 }
 
 body {
-    background: linear-gradient(to right, #efefbb, #d4d3dd); 
+  background: linear-gradient(to right, #efefbb, #d4d3dd);
+}
 
+header {
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header p {
+  font-size: 2rem;
+  color: white;
+}
+
+main {
+    width: min(800px, 90%);
+    margin: auto;
+    padding: 5px;
+    margin-top: 10px;
+    text-align: justify;
 }
 
 .none {
-    display: none;
-} 
+  display: none;
+}
+
+#sc-01 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#btn-sc-01 {
+    background: none;
+    border: 1px solid blue;
+    padding: 5px;
+    width: max-content;
+    border-radius: 5px;
+    cursor: pointer;
+    
+}
+
+#btn-sc-01:hover {
+    transition: 0.5s;
+    background: gray;
+    
+}
