--- a/style.css
+++ b/style.css
@@ -30,40 +30,44 @@ header p {
 }
 
 main {
-    width: min(800px, 90%);
-    margin: auto;
-    padding: 5px;
-    margin-top: 10px;
-    text-align: justify;
+  width: min(800px, 90%);
+  margin: auto;
+  padding: 5px;
+  margin-top: 10px;
+  text-align: justify;
 }
 
 .none {
-  display: none;
+  display: none!important;
 }
 
 img {
-    width: 100%;
-}
-
-#sc-01 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
 }
 
 #btn {
-    background: none;
-    border: 1px solid blue;
-    padding: 5px;
-    width: max-content;
-    border-radius: 5px;
-    cursor: pointer;
-    
+  background: none;
+  border: 1px solid blue;
+  padding: 5px;
+  width: max-content;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-#btn-sc-01:hover {
+#btn:hover {
     transition: 0.5s;
     background: gray;
-    
+  }
+
+#sc {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.sc-02 {
+    display: none;
+}
+
+
